tdf#156699 sfx2: Extract helper method to get char value + name

It will be reused in an upcoming commit to set the a11y
name for the `SvxCharView`.

Change-Id: Ib5938e5363571e547ee00cac8432f919b60cd97a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155756
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>